--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,54 @@
-celery
-datetime
-flask
-flask-bcrypt
-flask-caching
-flask-cors
-flask-excel
-flask-jwt-extended
-flask-mail
-flask-restful
-flask-sqlalchemy
-redis
+amqp==5.2.0
+aniso8601==9.0.1
+bcrypt==4.2.0
+billiard==4.2.1
+blinker==1.9.0
+cachelib==0.9.0
+celery==5.4.0
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+contourpy==1.3.0
+cycler==0.12.1
+DateTime==5.5
+Flask==3.0.3
+Flask-Bcrypt==1.0.1
+Flask-Caching==2.3.0
+Flask-Cors==5.0.0
+Flask-Excel==0.0.7
+Flask-JWT-Extended==4.6.0
+Flask-Mail==0.10.0
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.1.1
+fonttools==4.54.1
+greenlet==3.1.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+kiwisolver==1.4.7
+kombu==5.4.2
+lml==0.1.0
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+numpy==2.1.3
+packaging==24.2
+pillow==11.0.0
+prompt_toolkit==3.0.48
+pyexcel==0.7.1
+pyexcel-io==0.6.7
+pyexcel-webio==0.1.4
+PyJWT==2.9.0
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+redis==5.2.0
+setuptools==75.3.0
+six==1.16.0
+SQLAlchemy==2.0.36
+texttable==1.7.0
+typing_extensions==4.12.2
+tzdata==2024.2
+vine==5.1.0
+wcwidth==0.2.13
+Werkzeug==3.1.3
+zope.interface==7.1.1
