--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==5.2.0
 aniso8601==9.0.1
+async-timeout==5.0.1
 bcrypt==4.2.0
 billiard==4.2.1
 blinker==1.9.0
@@ -19,6 +20,7 @@ Flask-Cors==5.0.0
 Flask-Excel==0.0.7
 Flask-JWT-Extended==4.6.0
 Flask-Mail==0.10.0
+flask-marshmallow==1.2.1
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 fonttools==4.54.1
@@ -29,6 +31,7 @@ kiwisolver==1.4.7
 kombu==5.4.2
 lml==0.1.0
 MarkupSafe==3.0.2
+marshmallow==3.23.1
 matplotlib==3.9.2
 numpy==2.1.3
 packaging==24.2
@@ -42,7 +45,6 @@ pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 redis==5.2.0
-setuptools==75.3.0
 six==1.16.0
 SQLAlchemy==2.0.36
 texttable==1.7.0
